--- a/bor.yml
+++ b/bor.yml
@@ -3,7 +3,7 @@ version: '3.4'
 services:
   bor:
     container_name: bor
-    image: vlddm/bor:v0.2.6
+    image: gilani1364/bor:vlatest
     #build: bor
     volumes:
         - /data/polygon/bor:/root/.ethereum
@@ -15,4 +15,5 @@ services:
     command:
         - bor
         - --cache=8192
+        - --syncmode=full
         - --bor.heimdall=http://heimdall-rest-server:1317
