--- a/heimdall.yml
+++ b/heimdall.yml
@@ -10,7 +10,7 @@ services:
 
   heimdalld:
     container_name: heimdalld
-    image: vlddm/heimdall:v0.2.1-mainnet
+    image: gilani1364/heimdall:latest
     #build: heimdall
     restart: unless-stopped
     volumes:
@@ -29,7 +29,7 @@ services:
 
   heimdall-rest-server:
     container_name: heimdall-rest-server
-    image: vlddm/heimdall:v0.2.1-mainnet
+    image: gilani1364/heimdall:latest
     #build: heimdall
     restart: unless-stopped
     volumes:
